--- a/HTML/ข้อที่1/Profile.html
+++ b/HTML/ข้อที่1/Profile.html
@@ -76,8 +76,8 @@
     </div>
     
     <div style="margin-top: 40px;">
-        <button>My Friend lists</button>
-        <button>Homepage</button>
+        <button><a href="Friend.html" style="text-decoration: none;">My Friend Lists</a></button>
+        <button><a href="Index.html" style="text-decoration: none;">Home</a></button>
     </div>
 
 </body>
