--- a/HTML/ข้อที่1/Friend.html
+++ b/HTML/ข้อที่1/Friend.html
@@ -4,9 +4,101 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Friend lists</title>
+    <style>
+        table, th, td {
+            border-collapse: collapse;
+            border: 2px solid sienna;
+            padding: 8px; 
+        }
+
+        #friend tr:hover {background-color: rgb(226, 240, 174);}
+
+        th {
+            background-color: rgb(226, 240, 174);
+        }
+
+        button {
+
+            padding: 20px;
+            font-size: 20px;
+
+        }
+
+
+    </style>
 </head>
 <body>
+    <h1>My friend lists at Codecamp Online #8</h1>
     
+    <table id="friend">
+        <tr>
+            <th>No. </th>
+            <th>Name</th>
+            <th>E-mail</th>
+            <th>Phone number</th>
+        </tr>
+        <tr><td>1</td><td>ชาติชาย กอจิตตวนิจ</td><td>chardchai.k@gmail.com</td><td>-</td></tr>
+        <tr><td>2</td><td>จารุวัฒน์ แหยมคง</td><td>ball_jaruwat@hotmail.com</td><td>-</td></tr>
+        <tr><td>3</td><td>Thitinan Kliangsuwan</td><td>thitinan.kl@gmail.com</td><td>080-6489365</td></tr>
+        <tr><td>4</td><td>Puchit Kochakul</td><td>pukiji@gmail.com</td><td>086-6562534</td></tr>
+        <tr><td>5</td><td>พรสุดา นาเลิง</td><td>phonsuda-nan@hotmail.com</td><td>096-3484244</td></tr>
+        <tr><td>6</td><td>Krit Kosanwit</td><td>teekrit@gmail.com</td><td>098-5942894</td></tr>
+        <tr><td>7</td><td>Kritchawat Banjoedthavorn</td><td>supermaestoso@gmail.com</td><td>081-3504479</td></tr>
+        <tr><td>8</td><td>Chatri Saenthamphol</td><td>chatri.stp97@gmail.com</td><td>095-9532148</td></tr>
+        <tr><td>9</td><td>Kritsakan Rotbut</td><td>gritsakan1133@hotmail.com</td><td>080-8840857</td></tr>
+        <tr><td>10</td><td>วิศวชาติ สินธุวณิก</td><td>wisavachart.s@gmail.com</td><td>092-2698733</td></tr>
+        <tr><td>11</td><td>Parichut Saetae</td><td>Parichut.st05@gmail.com</td><td>084-6246563</td></tr>
+        <tr><td>12</td><td>watcharin tassananchalee</td><td>twatcharin90@gmail.com</td><td>088-0184211</td></tr>
+        <tr><td>13</td><td>Tacha Kumcha</td><td>litdemonlit@gmail.com</td><td>081-9762242</td></tr>
+        <tr><td>14</td><td>Karn Kaewpaengphan</td><td>khankaewpaengphan@gmail.com</td><td>098-3626994</td></tr>
+        <tr><td>15</td><td>Peerapol Jirapathomsakul</td><td>iboomblog@gmail.com</td><td>096-6141695</td></tr>
+        <tr><td>16</td><td>Thanaporn Cheenthada</td><td>eye54067@hotmail.com</td><td>098-7059982</td></tr>
+        <tr><td>17</td><td>พงศกร วิชาศรี</td><td>wichasri.p@hotmail.com</td><td>099-1597492</td></tr>
+        <tr><td>18</td><td>Saipan Srisongmeaung</td><td>saipan.ssm@gmail.com</td><td>084-8282424</td></tr>
+        <tr><td>19</td><td>Patcharapol Chingchanakol</td><td>Patcharapol0210@gmail.com</td><td>098-2643521</td></tr>
+        <tr><td>20</td><td>น.ส.อารีวรรณ สุจินตวงษ์</td><td>a.sujintawong@gmail.com</td><td></td></tr>
+        <tr><td>21</td><td>พิชญ์นรี กระจ่างวงษ์</td><td>pitnaree_@outlook.com</td><td>098-2633085</td></tr>
+        <tr><td>22</td><td>บริษัท มาร์เวลิค เอ็นจิ้น จำกัด (Akarawuth Tamrareang)</td><td>akarawuth@marvelic.co.th</td><td>061-6163663</td></tr>
+        <tr><td>23</td><td>Rattasat Sudnongbua</td><td>Rattasat_pmk@hotmail.com</td><td>088-5942654</td></tr>
+        <tr><td>24</td><td>Patthara Thongvisoong</td><td>p.pattharath@gmail.com</td><td>081-7293944</td></tr>
+        <tr><td>25</td><td>กิตติพัฒน์ เรืองเผ่าพันธุ์</td><td>kittiphat.rpp@gmail.com</td><td>088-0999018</td></tr>
+        <tr><td>26</td><td>Narakon Singsakda</td><td>narakon.computer@gmail.com</td><td>061-5437888</td></tr>
+        <tr><td>27</td><td>Sutja Dhavehutsadin Na Ayuthaya</td><td>sutjadhavehutsadin@gmail.com</td><td>090-1123113</td></tr>
+        <tr><td>28</td><td>Dechtana Treelaonampa</td><td>pawit_budhong@hotmail.com</td><td>091-8592247</td></tr>
+        <tr><td>29</td><td>Sher Janmathong</td><td>sjanmathong@gmail.com</td><td>065-3091151</td></tr>
+        <tr><td>30</td><td>Pakorn Proyrungroj</td><td>pakorn.proy@gmail.com</td><td>099-1974965</td></tr>
+        <tr><td>31</td><td>THUNTAPAT SATIRAPEERAKAAN</td><td>Johm28@gmail.com</td><td>065-5495195</td></tr>
+        <tr><td>32</td><td>Surakat Moniam</td><td>thegost258741@hotmail.com</td><td>093-2363916</td></tr>
+        <tr><td>33</td><td>Warin Poomarin</td><td>warren.rice.ca@gmail.com</td><td>092-6263642</td></tr>
+        <tr><td>34</td><td>Theera Suriyawongse</td><td>Dr.VanDamer@Gmail.com</td><td></td></tr>
+        <tr><td>35</td><td>ก้องภพ บุญวงศ์</td><td>alanineify@gmail.com</td><td>66987670665</td></tr>
+        <tr><td>36</td><td>ปานัท แสนมหาชัย</td><td>panut.sanma@gmail.com</td><td></td></tr>
+        <tr><td>37</td><td>Thanakrit Chaivanichagul</td><td>chichixyz@hotmail.com</td><td>085-5707172</td></tr>
+        <tr><td>38</td><td>Thapwaris Chinsirirathkul</td><td>xbyrzt@gmail.com</td><td>087-2505599</td></tr>
+        <tr><td>39</td><td>Tanapat Leelarujiwong</td><td>aodz3210@gmail.com</td><td>089-9197608</td></tr>
+        <tr><td>40</td><td>Patavee Chancharoen</td><td>own_executive@hotmail.com</td><td>062-6230888</td></tr>
+        <tr><td>41</td><td>Umaphon Puranapan</td><td>p.umaphon@outlook.com</td><td>084-6879520</td></tr>
+        <tr><td>42</td><td>Jirayu Somcharoensin</td><td>pluem-jirayu@hotmail.com</td><td>082-7718382</td></tr>
+        <tr><td>43</td><td>Samatcha Srikham</td><td>srikham.samatcha@gmai.com</td><td>083-5294451</td></tr>
+        <tr><td>44</td><td>Virachai Wongsena</td><td>wvirachai@gmail.com</td><td>087-8082159</td></tr>
+        <tr><td>45</td><td>Chaiwiwat Foungpaisarn</td><td>chaiwiwatmixx@gmail.com</td><td>095-8606994</td></tr>
+        <tr><td>46</td><td>Natthawan Srisan</td><td>natthawan6395@gmail.com</td><td>0803649245</td></tr>
+        <tr><td>47</td><td>Supakorn Meelarp</td><td>spk.korn@gmail.com</td><td>080-5154011</td></tr>
+        <tr><td>48</td><td>Thanadol Wiwatvongkaseam</td><td>petch_w@live.com</td><td>090-9837548</td></tr>
+        <tr><td>49</td><td>PERANUT BOONYAKIT</td><td>peranut.pepo@hotmail.com</td><td>062-5253851</td></tr>
+        <tr><td>50</td><td>นฤมล สาระสิงห์</td><td>annyyakuza9@gmail.com</td><td>0913762379</td></tr>
+        <tr><td>51</td><td>ณัฐพงษ์ ทองพึง</td><td>ntp.tpg@gmail.com</td><td>0873624564</td></tr>
+        <tr><td>52</td><td>Jirawat Panketkorn</td><td>bnn.bolt@gmail.com</td><td>0997702627</td></tr>
+        <tr><td>53</td><td>นัทที เพชระบูรณิน</td><td>eqill170@gmail.com</td><td>0971590491</td></tr>
+    
+    </table>
+    <div>
+        <table>
+            <td style="border: 2px solid white;"><a href="index.html"><button>Homepage</button></a></td>
+            <td style="border: 2px solid white;"><a href="Profile.html"><button>My profile</button></a></td>
+        </table>
+    </div>
+
 </body>
 </html>
